--- a/src/main/resources/assets/beyondrealitycore/lang/en_US.lang
+++ b/src/main/resources/assets/beyondrealitycore/lang/en_US.lang
@@ -205,7 +205,7 @@ tile.beyondrealitycore:chair:80.name=tutorial3
 tile.beyondrealitycore:chair:81.name=tutorial4
 tile.beyondrealitycore:chair:82.name=tutorial5
 tile.beyondrealitycore:chair:83.name=basic1
-tile.beyondrealitycore:chair:84.name=basic2
+tile.beyondrealitycore:chair:84.name=Cat Walks
 tile.beyondrealitycore:chair:85.name=basic3
 tile.beyondrealitycore:chair:86.name=basic4
 tile.beyondrealitycore:chair:87.name=basic5
