Update Lang File

--- a/src/main/resources/assets/beyondrealitycore/lang/en_US.lang
+++ b/src/main/resources/assets/beyondrealitycore/lang/en_US.lang
@@ -221,7 +221,7 @@ tile.beyondrealitycore:chair:96.name=Draconic Evolution
 tile.beyondrealitycore:chair:97.name=Reliquary
 tile.beyondrealitycore:chair:98.name=Thaumic Energistics
 tile.beyondrealitycore:chair:99.name=magic4
-tile.beyondrealitycore:chair:100.name=magic5
+tile.beyondrealitycore:chair:100.name=Magic Bees
 tile.beyondrealitycore:chair:101.name=magic6
 tile.beyondrealitycore:chair:102.name=magic7
 tile.beyondrealitycore:chair:103.name=magic8
