--- a/src/main/resources/assets/beyondrealitycore/lang/en_US.lang
+++ b/src/main/resources/assets/beyondrealitycore/lang/en_US.lang
@@ -1,5 +1,33 @@
-tab.entry.changelog=Changelog
-tab.entry.gregguide=Greg Tech Guide
+tab.entry.page1=Description Inserted here
+tab.entry.page2=Description Inserted here
+tab.entry.page3=Description Inserted here
+tab.entry.page4=Description Inserted here
+tab.entry.page5=Description Inserted here
+tab.entry.page6=Description Inserted here
+tab.entry.page7=Description Inserted here
+tab.entry.page8=Description Inserted here
+tab.entry.page9=Description Inserted here
+tab.entry.page10=Description Inserted here
+tab.entry.page11=Description Inserted here
+tab.entry.page12=Description Inserted here
+tab.entry.page13=Description Inserted here
+tab.entry.page14=Description Inserted here
+tab.entry.page15=Description Inserted here
+tab.entry.page16=Description Inserted here
+tab.entry.page17=Description Inserted here
+tab.entry.page18=Description Inserted here
+tab.entry.page19=Description Inserted here
+tab.entry.page20=Description Inserted here
+tab.entry.page21=Description Inserted here
+tab.entry.page22=Description Inserted here
+tab.entry.page23=Description Inserted here
+tab.entry.page24=Description Inserted here
+tab.entry.page25=Description Inserted here
+tab.entry.page26=Description Inserted here
+tab.entry.page27=Description Inserted here
+tab.entry.page28=Description Inserted here
+tab.entry.page29=Description Inserted here
+tab.entry.page30=Description Inserted here
 
 tile.beyondrealitycore:customBlock_0.name=Moon Iron Ore
 tile.beyondrealitycore:customBlock_1.name=Mars Iron Ore
@@ -33,7 +61,7 @@ tile.beyondrealitycore:customBlock_28.name=Mars Mutagen crystals
 tile.beyondrealitycore:customBlock_29.name=Mars Naquadria Ore
 tile.beyondrealitycore:BRC:dimGuardKiller.name=BR Item Fixer
 
-itemGroup.tabBeyondReality=Beyond Reality Core
+itemGroup.tabBeyondReality=Divergence Documentation
 tile.beyondrealitycore:oreApatite.name=Apatite Ore
 tile.beyondrealitycore:oreCopper.name=Copper Ore
 tile.beyondrealitycore:oreTin.name=Tin Ore
