--- a/src/main/resources/assets/beyondrealitycore/lang/en_US.lang
+++ b/src/main/resources/assets/beyondrealitycore/lang/en_US.lang
@@ -1,4 +1,4 @@
-tab.entry.page1=Description Inserted here
+ n tab.entry.page1=Description Inserted here
 tab.entry.page2=Description Inserted here
 tab.entry.page3=Description Inserted here
 tab.entry.page4=Description Inserted here
@@ -234,10 +234,10 @@ tile.beyondrealitycore:chair:81.name=tutorial4
 tile.beyondrealitycore:chair:82.name=tutorial5
 tile.beyondrealitycore:chair:83.name=basic1
 tile.beyondrealitycore:chair:84.name=Cat Walks
-tile.beyondrealitycore:chair:85.name=basic3
-tile.beyondrealitycore:chair:86.name=basic4
-tile.beyondrealitycore:chair:87.name=basic5
-tile.beyondrealitycore:chair:88.name=basic6
+tile.beyondrealitycore:chair:85.name=Cooking for blockheads
+tile.beyondrealitycore:chair:86.name=Helper Tools
+tile.beyondrealitycore:chair:87.name=Builders Guides
+tile.beyondrealitycore:chair:88.name=Pams Harvest Craft
 tile.beyondrealitycore:chair:89.name=basic7
 tile.beyondrealitycore:chair:90.name=basic8
 tile.beyondrealitycore:chair:91.name=basic9
@@ -250,7 +250,7 @@ tile.beyondrealitycore:chair:97.name=Reliquary
 tile.beyondrealitycore:chair:98.name=Thaumic Energistics
 tile.beyondrealitycore:chair:99.name=magic4
 tile.beyondrealitycore:chair:100.name=Magic Bees
-tile.beyondrealitycore:chair:101.name=magic6
+tile.beyondrealitycore:chair:101.name=AgriCraft
 tile.beyondrealitycore:chair:102.name=magic7
 tile.beyondrealitycore:chair:103.name=magic8
 tile.beyondrealitycore:chair:104.name=magic9
