--- a/src/main/resources/assets/beyondrealitycore/lang/en_US.lang
+++ b/src/main/resources/assets/beyondrealitycore/lang/en_US.lang
@@ -59,6 +59,7 @@ tile.beyondrealitycore:customBlock_26.name=Mars Ruby Ore
 tile.beyondrealitycore:customBlock_27.name=Moon Glowstone
 tile.beyondrealitycore:customBlock_28.name=Mars Mutagen crystals
 tile.beyondrealitycore:customBlock_29.name=Mars Naquadria Ore
+tile.beyondrealitycore:customBlock_29.name=Mystic Divergent Fertilizer 
 tile.beyondrealitycore:BRC:dimGuardKiller.name=BR Item Fixer
 
 itemGroup.tabBeyondReality=Divergence Documentation
