--- a/src/main/resources/assets/beyondrealitycore/lang/en_US.lang
+++ b/src/main/resources/assets/beyondrealitycore/lang/en_US.lang
@@ -194,7 +194,7 @@ tile.beyondrealitycore:chair:40.name=Tesseracts
 tile.beyondrealitycore:chair:41.name=Advanced Generators 
 tile.beyondrealitycore:chair:42.name=OpenComputers
 tile.beyondrealitycore:chair:43.name=Big Reactors
-tile.beyondrealitycore:chair:44.name=ChromatiCraft 
+tile.beyondrealitycore:chair:44.name=Academy Craft 
 tile.beyondrealitycore:chair:45.name=Soul Shards 
 tile.beyondrealitycore:chair:46.name=ThaumCraft  
 tile.beyondrealitycore:chair:47.name=Shamanry 
