--- a/src/main/resources/assets/beyondrealitycore/lang/en_US.lang
+++ b/src/main/resources/assets/beyondrealitycore/lang/en_US.lang
@@ -156,7 +156,7 @@ tile.beyondrealitycore:chair:2.name=Tinkers Construct
 tile.beyondrealitycore:chair:3.name=Rails and Carts 
 tile.beyondrealitycore:chair:4.name=Early Tech 
 tile.beyondrealitycore:chair:5.name=SteelWorks 
-tile.beyondrealitycore:chair:6.name=DecoCraft
+tile.beyondrealitycore:chair:6.name=Pratical Logistics
 tile.beyondrealitycore:chair:7.name=Builder's Guides 
 tile.beyondrealitycore:chair:8.name=Pistronics 
 tile.beyondrealitycore:chair:9.name=Mechworks 
