Added unbreakeable blocks via config

--- a/src/main/resources/assets/beyondreality/lang/en_US.lang
+++ b/src/main/resources/assets/beyondreality/lang/en_US.lang
@@ -113,3 +113,5 @@ tile.beyondreality:oretungsten.name=Tungsten ore
 tile.beyondreality:sparsetungsten.name=Sparse tungsten
 item.beyondreality:tinytungsten.name=Tiny tungsten
 tile.beyondreality:sporadictungsten.name=Sporadic tungsten
+
+tile
